Prescriptions, Summary : alignment corrected getData: API written

--- a/css/newStyles.css
+++ b/css/newStyles.css
@@ -77,7 +77,7 @@ body{
 .medicin-unit label{
   border: 0.5px solid #00b050;
 }
-.medicin-unit .active, .food .active{
+.medicin-unit .active, .food .active, .duration .active{
   background-color:  #00b050;
 }
 
@@ -230,5 +230,5 @@ body{
 }
 
 #p_check{
-width:70%;
+width:35%;
 }
